ffmpeg (7:2.4.1-1) UNRELEASED; urgency=medium

  * Import new upstream bugfix release 2.4.1.
  * Drop patches included upstream:
     - avcodec-x86-vp9lpf_Always-include-x86util.asm.patch
     - fix-build-when-AV_READ_TIME-is-unavailable.patch
     - vf_deshake-rename-Transform.vector-to-Transform.vec.patch

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Tue, 23 Sep 2014 20:50:39 +0200

ffmpeg (7:2.4-2) experimental; urgency=medium

  * Cherrypick patches from upstream:
     - fix-build-when-AV_READ_TIME-is-unavailable.patch:
       This fixes building on armel, mipsel and s390x.
     - vf_deshake-rename-Transform.vector-to-Transform.vec.patch:
       This fixes building on powerpc and ppc64el.
     - avcodec-x86-vp9lpf_Always-include-x86util.asm.patch:
       This fixes the executable stack lintian warning for libavcodec on i386.
  * Add lintian overrides for shlib-with-non-pic-code on i386, where non-PIC
    code is allowed.
  * Don't enable opencl, because it is considered experimental.
  * Bump policy to 3.9.6 (no changes required).
  * Mark ffmpeg-doc as Multi-Arch: foreign.
  * Install the headers in the triplet subdirectory of /usr/include.
    This is necessary, because some headers (e.g. libavutil/avconfig.h)
    are architecture-dependant.

 -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Thu, 18 Sep 2014 21:54:12 +0200

ffmpeg (7:2.4-1) experimental; urgency=medium

  * Import new major upstream release 2.4. (Closes: #729203)
     - Fixes CVE-2014-5271: proresenc_ks: fix buffer overflow
     - Fixes CVE-2014-5272: iff: fix out of array access
     - The non-free image tests/lena.pnm is not shipped anymore.
  * Switch Vcs-Browser to the cgit interface.
  * In the development packages add symbolic links from the standard lib*.so
    library names to the suffixed ones.
    This makes it possible to use the normal linker flags, e.g. '-lavcodec',
    to link against the FFmpeg libraries with '-ffmpeg' suffix.