@@ -5,6 +5,7 @@ ffmpeg (7:2.4.1-1) UNRELEASED; urgency=medium
      - avcodec-x86-vp9lpf_Always-include-x86util.asm.patch
      - fix-build-when-AV_READ_TIME-is-unavailable.patch
      - vf_deshake-rename-Transform.vector-to-Transform.vec.patch
+  * Disable Altivec on powerpc to fix test failures.
 
  -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Tue, 23 Sep 2014 20:50:39 +0200
 
